--- a/Source/GoHDashboard/Blazor-Dashboard/Pages/Index.razor
+++ b/Source/GoHDashboard/Blazor-Dashboard/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <a href="https://www.ortec-finance.com"></a>
-    <img src="images/logo.png" alt="Ortec Finance" align="right" width="300px"/>
+    <img src="images/logo.png" alt="Ortec Finance" width="300px"/>
     <div class="container-fluid">
         <h1>Game Of Homes</h1>
         <p>On this page you can find your score and gives you some insight in why you achieved this score.</p>
